# duq-safety-svc

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/duq_safety_svc/: __init__.py  alerter.py  config.py  llm_adapter.py  main.py  models.py
tests/: __init__.py  conftest.py  test_alerter.py  test_config.py  test_llm_adapter.py  test_models.py
